# QT-Project_1

./: CMakeLists.txt  Minisynth_QT_Detailed_Documentation (2).docx  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  tonesynth.cpp  tonesynth.h
